2006-05-03  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Set release to 0.SVN.
	* src/DataViews/_PersonView.py (define_actions): Change label.

2006-05-03  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: Optionally exclude text from buttons
	* src/GrampsCfg.py: add SIDEBAR_TEXT option
	* src/GrampsConfigKeys.py: add SIDEBAR_TEXT option
	* data/gramps.schemas.in: add SIDEBAR_TEXT option
	* src/GrampsGconfKeys.py: handle None returned by routines properly
	* src/Filters/Rules/Person/Makefile.am: remove unused files
	* src/DataViews/_FamilyView.py: update on db change
	* src/DataViews/_FamilyList.py: Move ColumnEdit local
	* src/ViewManager.py: remove ColumnEdit, make local

2006-05-03  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditPlace.py (_setup_fields): Typo.

2006-05-02  Don Allingham  <don@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: add family-warn back in
	* data/gramps.schemas.in: add family-warn back in
	
2006-05-02  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/*: Add object-specific rules.

	* src/GrampsWidgets.py (IconButton): Replace event box with button.
	* src/GrampsWidgets.py (WarnButton): Replace event box with button.

	* configure.in: Generate new Makefiles.
	* src/GenericFilters.py: Remove.
	* src/Filters: Move filtering to its own package.
	
	* src/RelLib/_BaseObject.py (PrivacyBase): Remove class, as it
	already has its own module.
	* src/AutoComp.py (StandardCustomSelector.fill): Adapt to new types.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Add broken
	witness note.

2006-05-01  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: view specific key mapping support
	* src/ViewManager.py: remember last View
	* src/Config/GrampsConfigKeys.py: LAST_VIEW key
	* src/PageView.py: key binding support
	* data/gramps.schemas.in: LAST_VIEW key
	* src/Editors/_EditPersonRef.py (EditPersonRef._select_person): fix
	call to SelectPerson